<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:background="@drawable/bg_theme_top">
            <FrameLayout
                android:id="@+id/fl_msg"
                android:layout_width="48dp"
                android:layout_alignParentRight="true"
                android:layout_height="48dp"
                android:layout_marginTop="@dimen/dp_20">
                <ImageView
                    android:id="@+id/iv_msg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/news"
                    android:layout_gravity="center"
                    />
            </FrameLayout>
            <RelativeLayout
                android:id="@+id/rl_user"
                android:layout_below="@+id/fl_msg"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="2dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="15dp"
                    android:src="@mipmap/pic2"/>
                <TextView
                    android:id="@+id/tv_username"
                    android:layout_toRightOf="@+id/iv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:text="庆庆思密达"/>
                <TextView
                    android:id="@+id/tv_real_name"
                    android:layout_width="wrap_content"
                    android:paddingLeft="6dp"
                    android:paddingRight="6dp"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:layout_height="wrap_content"
                    android:text="@string/go_real_name"
                    android:textSize="11dp"
                    android:layout_toRightOf="@+id/iv_user"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="3dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_go_real_name"
                    android:textColor="@color/gray_6"/>

                <ImageView
                    android:id="@+id/iv_more_mine"
                    android:layout_width="8dp"
                    android:layout_height="15dp"
                    android:src="@mipmap/more_mine"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="35dp"/>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/rl_user"
                android:layout_height="90dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:id="@+id/ll_merchant_entry"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:text="@string/merchant_entry"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_my_wallet"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="13dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:text="@string/my_wallet"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_my_wonderful"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@color/white"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:textColor="@color/white"
                        android:layout_marginTop="10dp"
                        android:text="@string/my_wonderful"/>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>


    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>
